@@ -2,6 +2,7 @@ VERSION: 0.0.3
 
 Release notes 0.0.3
 - README update.
+- Introduction of new connect() method allowing the Picasa web service connection to be reset during runtime.
 
 Release notes 0.0.2
 - Introduction of further documentation (README / CHANGES)
